deploy/vms/staging-firewall.conf
# Generated by iptables-save v1.8.7 on Fri May 16 17:48:03 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:f2b-sshd - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -i lo -j ACCEPT
-A INPUT ! -s 141.45.0.0/16 -j DROP
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -o lo -j ACCEPT
-A OUTPUT ! -d 141.45.0.0/16 -j DROP
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 123 -j ACCEPT
-A OUTPUT -j DROP
COMMIT
# Completed on Fri May 16 17:48:03 2025
# Generated by iptables-save v1.8.7 on Fri May 16 17:48:03 2025
*nat
:PREROUTING ACCEPT [3473356:210634822]
:INPUT ACCEPT [5:360]
:OUTPUT ACCEPT [803:57386]
:POSTROUTING ACCEPT [810:57966]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o br-073964cf71bf -j MASQUERADE
-A POSTROUTING -s 172.23.0.0/16 ! -o br-bcd9def6da80 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.26.0.5/32 -d 172.26.0.5/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A POSTROUTING -s 172.26.0.5/32 -d 172.26.0.5/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.23.0.5/32 -d 172.23.0.5/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A POSTROUTING -s 172.23.0.5/32 -d 172.23.0.5/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.18.0.5/32 -d 172.18.0.5/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.18.0.5/32 -d 172.18.0.5/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A DOCKER -i br-073964cf71bf -j RETURN
-A DOCKER -i br-bcd9def6da80 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-bcd9def6da80 -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.23.0.5:443
-A DOCKER ! -i br-bcd9def6da80 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.23.0.5:80
-A DOCKER ! -i br-073964cf71bf -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.18.0.5:80
-A DOCKER ! -i br-073964cf71bf -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.18.0.5:443
COMMIT
# Completed on Fri May 16 17:48:03 2025
